Error handling, bugfixes.