@@ -61,14 +61,22 @@ public class MonoObservableTest {
 
 	@Test
 	public void exceptionOnPublishTest() throws InterruptedException {
-		List<Integer> expected = Collections.singletonList(3);
+		List<Integer> expected = List.of(3, 45);
 		List<Integer> actual = Collections.synchronizedList(new ArrayList<>());
 
 		Publisher<Integer> publisher = Publisher.simple();
 		MonoObservable<Integer> observable = publisher.asObservable().toMono();
-		observable.subscribe(integer -> {
-			actual.add(integer);
-			throw new IllegalStateException();
+		observable.subscribe(new FlexibleSubscriber<>() {
+			@Override
+			public void onNext(Integer item) {
+				actual.add(item);
+				throw new IllegalStateException();
+			}
+
+			@Override
+			protected void onError(Throwable error) {
+				actual.add(45);
+			}
 		});
 
 		publisher.publish(3);
